add implementation for member management, connecting view to data via viewmodel and repository, change primary key to text type

--- a/app/src/main/res/layout/activity_manage_member.xml
+++ b/app/src/main/res/layout/activity_manage_member.xml
@@ -61,6 +61,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/et_member_phone"
                 fancy:fb_radius="30dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
