move firebase project to new repo. refactoring package name from io.muhwyndham.riwayat to io.muhwyndhamhp.riwayat

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#6202ee</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
 </resources>
