--- a/app/src/main/res/layout/activity_manage_member.xml
+++ b/app/src/main/res/layout/activity_manage_member.xml
@@ -11,8 +11,8 @@
         android:id="@+id/rv_member"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/cv_input"/>
+        app:layout_constraintBottom_toTopOf="@id/cv_input"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cv_input"
@@ -54,7 +54,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:layout_marginBottom="10dp"
                 android:padding="16dp"
                 android:text="@string/tambahkan_anggota"
                 android:textColor="@color/white"
