--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,6 +30,7 @@
         app:layout_constraintTop_toBottomOf="@id/text_title">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/cv_input_kasus"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
