--- a/app/src/main/res/layout/activity_input_case.xml
+++ b/app/src/main/res/layout/activity_input_case.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:fancy="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.InputCaseActivity">
 
-    <include layout="@layout/case_form_layout"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <include android:id="@+id/layout_form" layout="@layout/case_form_layout"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <mehdi.sakout.fancybuttons.FancyButton
+            android:id="@+id/bt_input_member"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_gravity="center"
+            android:paddingTop="16dp"
+            android:paddingBottom="16dp"
+            android:paddingLeft="48dp"
+            android:paddingRight="48dp"
+            android:text="INPUT KASUS"
+            android:textColor="@color/white"
+            fancy:fb_radius="30dp" />
+    </LinearLayout>
+
+</ScrollView>
