--- a/app/src/main/res/layout/case_form_layout.xml
+++ b/app/src/main/res/layout/case_form_layout.xml
@@ -65,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Nomor HP Pelapor"
+                android:inputType="phone"
                 android:singleLine="true" />
 
         </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>
@@ -174,6 +175,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="No. CID"
+                    android:inputType="number"
                     android:singleLine="true" />
 
             </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>
