--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -8,6 +8,15 @@
     android:background="@color/white"
     tools:context=".ui.HomeActivity">
 
+    <ImageView
+        android:id="@+id/iv_background"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintVertical_bias="1"
+        android:layout_height="wrap_content"/>
+
+
     <TextView
         android:id="@+id/text_title"
         android:layout_width="wrap_content"
@@ -192,8 +201,11 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="40dp"
-        android:padding="16dp"
-        android:text="INPUT LAPORAN"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:paddingLeft="48dp"
+        android:paddingRight="48dp"
+        android:text="ABOUT US "
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
