add implementation for listing case into recyclerview

--- a/app/src/main/res/layout/activity_location_picker.xml
+++ b/app/src/main/res/layout/activity_location_picker.xml
@@ -28,9 +28,10 @@
             tools:context=".MapsActivity" />
 
         <ListView
+            android:backgroundTint="@color/white"
             android:id="@+id/listPlaces"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></ListView>
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </LinearLayout>
