--- a/app/src/main/res/layout/activity_manage_member.xml
+++ b/app/src/main/res/layout/activity_manage_member.xml
@@ -33,7 +33,7 @@
                 android:layout_margin="10dp"
                 android:padding="16dp"
                 app:animationDuration="200"
-                app:borderColor="@color/colorAccent"
+                app:borderColor="@color/colorPrimary"
                 app:borderWidth="2dp"
                 app:cornerRadius="0dp"
                 app:layout_constraintTop_toTopOf="parent">
@@ -56,7 +56,7 @@
                 android:layout_margin="10dp"
                 android:padding="16dp"
                 app:animationDuration="200"
-                app:borderColor="@color/colorAccent"
+                app:borderColor="@color/colorPrimary"
                 app:borderWidth="2dp"
                 app:cornerRadius="0dp"
                 app:layout_constraintTop_toBottomOf="@id/til_member_name">
@@ -73,20 +73,23 @@
             </ss.anoop.awesometextinputlayout.AwesomeTextInputLayout>
 
 
-            <mehdi.sakout.fancybuttons.FancyButton
+            <Button
                 android:id="@+id/bt_input_member"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/colorAccent"
                 android:layout_marginLeft="20dp"
                 android:layout_marginRight="20dp"
-                android:padding="16dp"
+                android:paddingStart="30dp"
+                android:paddingEnd="30dp"
+                android:paddingTop="20dp"
+                android:paddingBottom="20dp"
                 android:text="@string/tambahkan_anggota"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/til_member_phone"
-                fancy:fb_radius="30dp" />
+                app:layout_constraintTop_toBottomOf="@id/til_member_phone" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
