--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,15 +20,28 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/member_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:maxWidth="220dp"
+        android:text="Sedang melakukan proses Login..."
+        android:textAlignment="center"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@id/progress_horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <ProgressBar
+        android:id="@+id/progress_horizontal"
         style="?android:attr/progressBarStyleHorizontal"
-        android:indeterminate="true"
         android:layout_width="300dp"
         android:layout_height="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="50dp"
+        android:indeterminate="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
