--- a/app/src/main/res/layout/activity_manage_member.xml
+++ b/app/src/main/res/layout/activity_manage_member.xml
@@ -11,7 +11,8 @@
         android:id="@+id/rv_member"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@id/cv_input"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="220dp"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.cardview.widget.CardView
